# py_apps

./: README.md  pyproject.toml  setup.py
my_apps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
py_apps/: appServer.py  asyncSerial.py  certServer.py  myApp.py  petrolPrice.py  rainRadar.py  rainradar.py  requirements.txt  serial2mqtt.py  serialMqtt.py  vpnController.py  vpnCtrl.py  webInfo.ini  webInfo.py  wgControll.py
py_apps/rainRadar/: rainRadar.ini  rainRadar.py  requirements.txt
