[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_apps"
version = "0.0.1"
dependencies = [
    "asyncio",
	'aiohttp',
	'aiomqtt',
    'aioserial',
    'aiosignal',
    'attrs',
    'frozenlist',
    'idna',
    'multidict',
    'paho-mqtt',
	'pyserial',
    'systemd',
    'yarl'
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
myServer = "py_apps.appServer:main"
myRainRadar = "py_apps.rainRadar:main"
myPetrolPrice = "py_apps.petrolPrice:main"
mVpnCtrl = "py_apps.mVpnCtrl:main"